feat(client): DaemonLaunchPlan, so the daemon says how to run itself (#40)
* chore(deps): relock after the 2.15.0 contract and tools bumps

Four Renovate bumps landed on main (#36–#39) without a lockfile refresh, so
every configuration that resolves an `ee.schimke.composeai` artifact fails to
resolve: the dependency asks for 2.15.0 while the lock strictly pins 2.14.0.
`./gradlew :daemon-client:check` on a clean checkout of main cannot configure.

Regenerated with `./gradlew resolveAndLockAll --write-locks`.

This is the second time the same shape has broken main. The cause is upstream
of the lockfiles: the CI concurrency group cancels main push runs, so a bump can
merge without a completed build ever reporting on it.

* feat(client): DaemonLaunchPlan, so the daemon says how to run itself

A `DaemonLaunchDescriptor` is a JVM command line, and
`SubprocessDaemonClientFactory` executes one faithfully while deciding almost
nothing. Nothing published the knowledge of what belongs *in* one, so every
caller worked it out again — and compose-ai-tools worked it out twice, in
`AndroidPreviewClasspath` and `AndroidBundleLaunch`, kept aligned by a KDoc
comment asking the reader to keep them in sync.

They diverged, and the divergence was a live bug: three properties the Android
renderer and the figma-svg connector read (`composeai.fonts.offline`,
`composeai.svg.embedFonts`, `composeai.svg.background`) were forwarded on the
Gradle path and the desktop serve daemon but on no Android lane, so an
air-gapped Android render still reached for Google Fonts
(yschimke/compose-ai-tools#5371).

None of that is a decision a caller is entitled to make. The `--add-opens` set
is what our Robolectric host needs on JDK 17+; the `robolectric.*` values are
how our renderer expects Robolectric configured; the `robolectric.properties`
package paths are our packages — spelled, until now, in a module in another
repository on another release train, where renaming a package here breaks
nothing at compile